cython seems to be working

--- a/cython/Untitled.ipynb
+++ b/cython/Untitled.ipynb
@@ -2,13 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "%load_ext Cython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-b70acdbffaf4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "np.zeros(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9.]\n",
+      "<MemoryView of 'ndarray' object>\n",
+      "[  0.  22.   2.   3.   4.   5.   6.   7.   8.   9.]\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "[   0.    0.    0.    0.  111.    0.    0.    0.    0.    0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%cython\n",
+    "import numpy as np\n",
+    "cimport numpy as np\n",
+    "\n",
+    "\n",
+    "a = np.arange(10, dtype=np.float64)\n",
+    "\n",
+    "cdef double[:] b = a\n",
+    "\n",
+    "print a\n",
+    "print b\n",
+    "\n",
+    "b[1] = 22\n",
+    "\n",
+    "print a\n",
+    "\n",
+    "from libc.string cimport memset\n",
+    "memset(&b[0], 0, len(a)*sizeof(np.float64))\n",
+    "\n",
+    "print a\n",
+    "\n",
+    "cdef struct Crap:\n",
+    "    double * a\n",
+    "    \n",
+    "cdef Crap crap = Crap(&b[0])\n",
+    "\n",
+    "crap.a[4] = 111\n",
+    "\n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'b' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-3b5d5c371295>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'b' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
@@ -204,7 +301,15 @@
     "- take in two numpy arrays, enter into struct of two float *s\n",
     "- return a float * answer, which we wrap to a numpy array\n",
     "- who cleans up?\n",
-    "- take three numpy arrays, write avg of two into the third."
+    "- take three numpy arrays, write avg of two into the third.\n",
+    "\n",
+    "# library interface\n",
+    "- have a C library (maybe just a pure cython function)\n",
+    "- function takes in two float pointers and an int and returns their average\n",
+    "- make versions that take in double and long just to play with\n",
+    "- maybe take in a third pointer for the answer\n",
+    "- if the pointer is NULL, have it allocate space and return the pointer\n",
+    "- then the Cython writer has to decide who is responsible for the memory in the NULL and non NULL case"
    ]
   },
   {
