--- a/cython/Untitled.ipynb
+++ b/cython/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,25 +13,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-b70acdbffaf4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 4}\n",
+      "{'a': 1, 'b': 4}\n",
+      "{'a': 1, 'b': 4}\n",
+      "{'a': -17, 'b': 4}\n"
      ]
     }
    ],
    "source": [
-    "np.zeros(10)"
+    "%%cython\n",
+    "\n",
+    "ctypedef struct Mything:\n",
+    "    int a\n",
+    "    int b\n",
+    "    \n",
+    "cdef class Workspace:\n",
+    "    cdef Mything _mything\n",
+    "    def __cinit__(self, a, b):\n",
+    "        self._mything.a = a\n",
+    "        self._mything.b = b\n",
+    "        \n",
+    "    def show(self):\n",
+    "        print self._mything.a\n",
+    "        print self._mything.b\n",
+    "        \n",
+    "    def giveup(self):\n",
+    "        return self._mything\n",
+    "    \n",
+    "cdef Mything mything\n",
+    "\n",
+    "d = dict(a=1,b=4)\n",
+    "\n",
+    "mything = d\n",
+    "\n",
+    "print d\n",
+    "print mything\n",
+    "\n",
+    "mything.a = -17\n",
+    "\n",
+    "print d\n",
+    "print mything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 4}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "d['a'] = 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "work.show()"
    ]
   },
   {
